Fix Text Overlap

--- a/css/index.css
+++ b/css/index.css
@@ -103,15 +103,14 @@ button:hover {
   font-family: 'Great Vibes';
   font-size: 150px;
   line-height: 115px;
-  height: 60px;
-  /* padding-bottom: 20px; */
+  height: 70px;
+  /* margin-bottom: 150px; */
 }
 
 #AKA {
-  /* padding-top: 25px; */
   font-size: 40px;
   line-height: 40px;
-  /* height: 40px; */
+
 }
 
 
